[project]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Breno",email = "brenob6@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "poetry_demo", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "safety (>=3.7.0,<4.0.0)",
    "ruff (>=0.15.8,<0.16.0)",
    "bandit (>=1.9.4,<2.0.0)"
]
